--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -75,6 +75,14 @@ p {
   }
 }
 
+#logout {
+  cursor: default;
+  &:hover {
+    background-color: transparent;
+  }
+}
+
+
 /* footer */
 
 footer {
